# motorways

./: .gitignore  CMakeLists.txt  main.cpp
configs/: config.cfg
